refactor: optimize frontend and backend architecture